--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
         body {
-            background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+            background-color: #102A54
         }
     </style>
 
